--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,9 +21,9 @@ jobs:
     - name: Install dependencies
       run: |
         pip install -r requirements.txt
-      working-directory: ./Tests
+      working-directory: Tests
 
     - name: Run tests
       run: |
         python -m unittest WordHidder_test.py
-      working-directory: ./Tests
+      working-directory: Tests
